# rust-cmake-hello-world

./: .gitmodules  Cargo.toml  README.md  match.cc
libhello/: CMakeLists.txt
libsum/: CMakeLists.txt  sum.c  sum.cc  sum.h
src/: build.rs  lib.rs  main.rs  re2.rs
tryrun/: CMakeLists.txt
